// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. caption with container and text styles 1`] = `
<style>
.IS1 {
  color: green;
  font-family: GillSansMTStd-Medium;
  font-size: 13;
  line-height: 17px;
}

.IS2 {
  color: green;
  font-family: GillSansMTStd-Medium;
  font-size: 9;
  line-height: 17px;
  font-weight: 400;
  letter-spacing: 1;
}

.IS3 {
  padding-top: 10px;
  background-color: red;
}
</style>

<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS3"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
    >
      Some caption text goes in here
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
    >
      JUST CREDITS
    </div>
  </div>
</div>
`;

exports[`2. caption with container, caption, and credit styles 1`] = `
<style>
.IS1 {
  color: green;
  font-family: GillSansMTStd-Medium;
  font-size: 10;
  line-height: 17px;
}

.IS2 {
  color: green;
  font-family: GillSansMTStd-Medium;
  font-size: 8;
  line-height: 17px;
  font-weight: 400;
  letter-spacing: 1;
}

.IS3 {
  padding-top: 10px;
  background-color: red;
}
</style>

<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS3"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
    >
      Some caption text goes in here
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
    >
      JUST CREDITS
    </div>
  </div>
</div>
`;

exports[`3. caption with only container styles 1`] = `
<style>
.IS1 {
  color: #696969;
  font-family: GillSansMTStd-Medium;
  font-size: 13;
  line-height: 17px;
}

.IS2 {
  color: #333333;
  font-family: GillSansMTStd-Medium;
  font-size: 9;
  line-height: 17px;
  font-weight: 400;
  letter-spacing: 1;
}

.IS3 {
  padding-top: 10px;
  background-color: blue;
}
</style>

<div
  className="tc-view__TcView-nuazoi-0 fPjBcr"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS3"
  >
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
    >
      Some caption text goes in here
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
    >
      JUST CREDITS
    </div>
  </div>
</div>
`;
